RecipeImpl tests; HTML Refactor; SpringSecurity: Custom login/logout;